# payrex-rust

./: .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  _typos.toml  clippy.toml  cobertura.xml  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml  dependencies.yml  lint.yml  release.yml
examples/: basic_usage.rs
src/: client.rs  config.rs  error.rs  http.rs  lib.rs
src/resources/: billing_statement_line_items.rs  billing_statements.rs  checkout_sessions.rs  customers.rs  events.rs  mod.rs  payment_intents.rs  payments.rs  payouts.rs  refunds.rs  webhooks.rs
src/types/: common.rs  currency.rs  event.rs  ids.rs  metadata.rs  mod.rs  pagination.rs  payment_methods.rs  timestamp.rs
