[package]
name = "payrex"
version = "0.1.0"
edition = "2021"
authors = ["ryana@ryanaque.com"]
description = "Unfficial Rust SDK for PayRex payment platform"
documentation = "https://docs.rs/payrex"
homepage = "https://github.com/payrex/payrex-rust"
repository = "https://github.com/payrex/payrex-rust"
license = "MIT OR Apache-2.0"
keywords = ["payrex", "payment", "api", "sdk", "philippines"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
rust-version = "1.81"

[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
http = "1.3.1"
bytes = "1.10.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Error handling
thiserror = "2.0.17"

# Date/Time
chrono = { version = "0.4.42", features = ["serde"] }

# URL handling
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
wiremock = "0.6"

[features]
default = ["rustls-tls"]
rustls-tls = []
native-tls = ["reqwest/native-tls"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
